--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 body {
-  background-color: #301934;
+  background-color: #EBECFD;
+}
+h1 {
+  color: blue;
+  font-family: serif;
+  font-size: 300%;
 }
