--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-  background-color: #EBECFD;
+  background-color: #BEBEBE;
 }
 h1 {
   color: blue;
-  font-family: serif;
+  font-family: 'Train One', cursive;
   font-size: 300%;
 }
